--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^6.3.6"
   },
   "devDependencies": {
-    "jest": "^28.1.1"
+    "jest": "^28.1.1",
+    "node-mocks-http": "^1.11.0"
   }
 }
