--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "verbose": true
+  },
   "scripts": {
     "test": "jest"
   },
@@ -15,6 +18,7 @@
   },
   "devDependencies": {
     "jest": "^28.1.1",
-    "node-mocks-http": "^1.11.0"
+    "node-mocks-http": "^1.11.0",
+    "supertest": "^6.2.3"
   }
 }
